<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="#b0b0b0"
        android:background="@null"
        android:text="@string/colorid"
        android:padding="2dp" />

    <EditText
        android:id="@id/textview2"
        android:layout_toRightOf="@+id/colour_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#b0b0b0"
        android:background="@null"
        android:text="@string/point"
        android:padding="2dp" />



    <LinearLayout

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="horizontal">



    <Button
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:text="@string/threefixes" />



    <Button
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:text="@string/twofixes" />

    <Button
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:text="@string/onefixes" />

    <Button
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:text="@string/zerofixes" />


</LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textColor="#b0b0b0"
        android:textSize="15dp"
        android:text="@string/Distancesfromcone"
        />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:gravity="top"
        android:stretchColumns="0,1,2">




        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#b0b0b0"
                android:gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#b0b0b0"
                android:gravity="center"
                android:text="@string/distancefeet"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#b0b0b0"
                android:gravity="center"
                android:text="@string/point"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/nearball"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=" 0"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/farball"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/robothome"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>


    </TableLayout>

</LinearLayout>













    

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/textview1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/colorid"
            android:padding="2dp" />


        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@id/textview1"
            android:text="@string/posints"
            android:padding="2dp"
            android:layout_toRightOf="@id/textview1" />

    </RelativeLayout>



</>